--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
             <div class="row">
               <div class="col-md-8 col-md-offset-2">
                 <div class="probootstrap-slider-text text-center probootstrap-animate probootstrap-heading">
-                  <h1 class="primary-heading">Live-streaming</h1>
-                  <h3 class="secondary-heading">Entire process</h3>
+                  <h1 class="primary-heading">Livestreaming</h1>
+                  <h3 class="secondary-heading">the entire process</h3>
                   <p class="sub-heading">Visit all of our processing plants 24x7, live streamed on <a href="https://youtube.com" target="_blank"> Youtube</a></p>
                 </div>
               </div>
@@ -76,8 +76,8 @@
             <div class="row">
               <div class="col-md-8 col-md-offset-2">
                 <div class="probootstrap-slider-text text-center probootstrap-animate probootstrap-heading">
-                  <h1 class="primary-heading">Blockchain for</h1>
-                  <h3 class="secondary-heading">Complete transparency</h3>
+                  <h1 class="primary-heading">Blockchain</h1>
+                  <h3 class="secondary-heading">for complete transparency</h3>
                   <p class="sub-heading">Every thing from procurement to processing to packing till delivery is logged via public blockchain ledger to ensure trus for our customers.</p>
                 </div>
               </div>
