--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 <div class="probootstrap-slider-text text-center probootstrap-animate probootstrap-heading">
                   <h1 class="primary-heading">Blockchain</h1>
                   <h3 class="secondary-heading">for complete transparency</h3>
-                  <p class="sub-heading">Every thing from procurement to processing to packing till delivery is logged via public blockchain ledger to ensure trus for our customers.</p>
+                  <p class="sub-heading">Every thing from procurement to processing to packing till delivery is logged via public blockchain ledger to ensure trust for our customers.</p>
                 </div>
               </div>
             </div>
