--- a/index.html
+++ b/index.html
@@ -283,8 +283,8 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Reservation</h2>
-          <p>Book a Table</p>
+          <h2>Buy Now</h2>
+          <p>Join our Whatapp group or download our app.</p>
         </div>
 
       </div>
