Update Join our whatsapp group
removed download our app

--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
 
         <div class="section-title">
           <h2>Buy Now</h2>
-          <p>Join our Whatapp group or download our app.</p>
+          <p>Join our Whatapp group by sending a message on +91 80897 48927</p>
         </div>
 
       </div>
