--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <ul>
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
 
-          <li><a class="nav-link scrollto" href="#events">Events</a></li>
+          <li><a class="nav-link scrollto" href="#products">Products</a></li>
 
           <li><a class="nav-link scrollto" href="#book-a-table">Subscribe</a></li>
 
@@ -89,7 +89,7 @@
           <h2>Fresh spices delivered to your home via subscription!</h2>
 
           <div class="btns">
-            <a href="#events" class="btn-menu animated fadeInUp scrollto">Our Products</a>
+            <a href="#products" class="btn-menu animated fadeInUp scrollto">Our Products</a>
             <a href="#book-a-table" class="btn-book animated fadeInUp scrollto">Buy Now</a>
           </div>
         </div>
@@ -154,7 +154,7 @@
 
 
     <!-- ======= Events Section ======= -->
-    <section id="events" class="events">
+    <section id="products" class="events">
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
