Added Whatapp Widget

--- a/index.html
+++ b/index.html
@@ -29,6 +29,13 @@
 
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
+  
+  <!-- Whatsapp Widget -->
+  	<script  type="text/javascript">
+	var url = 'assets/js/whatsappwidget.js'; var s = document.createElement('script'); s.type = 'text/javascript'; s.async = true; s.src = url; var options = {'enabled':true, 'chatButtonSetting': { 'backgroundColor': '#4dc247', 'ctaText': '  Chat', 'borderRadius': '25', 'marginLeft': '50', 'marginBottom': '50', 'marginRight': '50', 'position': 'right' }, 'brandSetting':{ 'brandName': 'Kuruvi Spice', 'brandSubTitle':'Quality Fresh Ground Spices', 'brandImg':'https://kuruvispice.com/assets/img/apple-touch-icon.png', 'ctaText': 'Start Chat', 'welcomeText':'Hi, there! \nHow can I help?', 'backgroundColor':'#0a5f54', 'borderRadius':'25', 'autoShow':'', 'phoneNumber':'918089748927&text=Hi%2C%20I%20would%20like%20to%20join%20the%20Kuruvi%20Spice%20Group%20and%20Order'}}; s.onload = function() { CreateWhatsappChatWidget(options); }; var x = document.getElementsByTagName('script')[0]; x.parentNode.insertBefore(s, x)
+	</script>
+	
+  
 
   <!-- =======================================================
   * Template Name: Restaurantly - v3.8.0
@@ -179,12 +186,12 @@
                     Rice flour made with high quality rice. Washed with RO purified water, sun dired and powdered..
                   </p>
                   <ul>
-                    <li><i class="bi bi-check-circled"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                    <li><i class="bi bi-check-circled"></i> Make Supersoft Idlis and Crispy Dosas.
                     </li>
 
                   </ul>
                   <p>
-                    Ullamco laboris nisi ut aliquip ex ea commodo consequat
+                    Rice flour with high fiber content - For a Healthy Lifesytle
                   </p>
                 </div>
               </div>
@@ -201,17 +208,15 @@
                     <p><span>₹400 per Kg</span></p>
                   </div>
                   <p class="fst-italic">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et dolore
-                    magna aliqua.
+                    Powdered from high quality chilli peppers. 
                   </p>
                   <ul>
-                    <li><i class="bi bi-check-circled"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                    <li><i class="bi bi-check-circled"></i> Make your curries lipsmacking spicy
                     </li>
 
                   </ul>
                   <p>
-                    Ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                    Freshly Powdered Spices with all oils and Capsaicin - For a Healthy Lifestyle
                   </p>
                 </div>
               </div>
@@ -480,8 +485,6 @@
                 <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
                 <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
                 <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-                <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-                <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
               </div>
             </div>
           </div>
