--- a/index.html
+++ b/index.html
@@ -233,9 +233,7 @@
                     <p><span>₹80 per 100gm</span></p>
                   </div>
                   <p class="fst-italic">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et dolore
-                    magna aliqua.
+                    Turmerice powder freshly ground.
                   </p>
                   <ul>
                     <li><i class="bi bi-check-circled"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.
