--- a/index.html
+++ b/index.html
@@ -233,15 +233,15 @@
                     <p><span>₹80 per 100gm</span></p>
                   </div>
                   <p class="fst-italic">
-                    Turmerice powder freshly ground.
+                    Turmeric powder freshly ground.
                   </p>
                   <ul>
-                    <li><i class="bi bi-check-circled"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                    <li><i class="bi bi-check-circled"></i> Brings warm flavors to your curries and stews
                     </li>
 
                   </ul>
                   <p>
-                    Ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                    Healthy dose of Curcumin - Antioxidants -  improves heart health
                   </p>
                 </div>
               </div>
@@ -258,17 +258,15 @@
                     <p><span>₹300 per Kg</span></p>
                   </div>
                   <p class="fst-italic">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et dolore
-                    magna aliqua.
+                    Coriander powder freshly ground from the Crunchy seeds.
                   </p>
                   <ul>
-                    <li><i class="bi bi-check-circled"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                    <li><i class="bi bi-check-circled"></i> Brings out the mild, nutty, citrusy flavours in your curries and stews.
                     </li>
 
                   </ul>
                   <p>
-                    Ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                    Healthy dose of Coriandrin aiding digestion and keeping Cholestrol under check
                   </p>
                 </div>
               </div>
